--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
         <div id="alias1">The DOM Queen</div>
         <div id="bio1">This country girl has an uncanny ability to fill in blank spaces.</div>
         </div>
-      <div class="block2 col-sm-4"><img src="http://www.mtv.com/crop-images/2013/09/11/DJ%20Khaled.jpg" alt="">
+      <div class="block2 col-sm-4"><img src="https://amp.businessinsider.com/images/567322aedd08952d5d8b46de-750-500.jpg"">
         <div id="name2">DJ Khaled</div>
         <div id="position2">n/a</div>
         <div id="alias2">Key++</div>
