--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 </head>
 <body>
   <header>
-    <h1>2017 DevLeague Prep</h1>
+    <h1>2018 DevLeague</h1>
     <h1>All Star Team</h1>
   </header>
   <div id="main">
